--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+
+    - uses: subosito/flutter-action@v2
+      with:
+        flutter-version: '3.29.0' # Specify a version close to what flet expects or just 'stable'
+        channel: 'stable'
     
     - uses: actions/setup-python@v5
       with:
