--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
 
     - uses: subosito/flutter-action@v2
       with:
-        flutter-version: '3.29.0' # Specify a version close to what flet expects or just 'stable'
+        flutter-version: '3.27.1'
         channel: 'stable'
     
     - uses: actions/setup-python@v5
