Fix: Replace heavy ML model with simple logic for web compatibility

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,7 @@ authors = [
 ]
 dependencies = [
   "flet==0.28.3",
-  "pandas>=2.0.0",
-  "scikit-learn>=1.3.0"
+  "pandas>=2.0.0"
 ]
 
 [tool.flet]
